--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -3,32 +3,29 @@
 
 <head>
 	<title>Library Management System</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" 
-	integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" 
-	crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
-	<!--
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css"> -->
 	<script src="https://code.jquery.com/jquery-3.6.1.js" 
 	integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" 
 	crossorigin="anonymous"></script>
+	<!--
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	-->
 	<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
 	<script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" 
+	integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" 
+	crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+	<link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap4.min.css">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css"> 
+	<script src="https://cdn.socket.io/4.5.0/socket.io.min.js" 
+	integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" 
+	crossorigin="anonymous"></script>
+	
 </head>
 <body>
 	<h1 class="d-flex justify-content-center"><%= title %></h1>
 	<div class="container">
-		<button type="button" class="logoutbtn btn btn-danger float-end">Logout</button>
-	</div>
-	<div class="container">
-		<h3>Add Book</h3>
-		<form class="form form1"  method="POST">
-			<input type="text" id="name" placeholder="Book Name" name="bookName" required />
-			<input type="text" id="author" placeholder="Book Author" name="bookAuthor" required/>
-			<input type="text" id="pages" placeholder="Book Pages" name="bookPages" required/>
-			<input type="text" id="prices" placeholder="Book Price" name="bookPrice" required/>
-			<button type="submit" class="submitbtn btn btn-primary">Add</button>
-		</form>
+		<button type="button" class="logoutbtn btn btn-danger">Logout</button>
 	</div>
 	<br/>
 	
@@ -47,20 +44,6 @@
 				</tr>
 			</thead>
 			<tbody class="maintable">
-				<p hidden><%= i=1 %></p>
-				<% data.forEach(element => { %>
-					<tr>
-						<td><%= i %></td>
-						<td><%= element.bookName %></td>
-						<td><%= element.bookAuthor %></td>
-						<td><%= element.bookPages %></td>
-						<td><%= element.bookPrice %></td>
-						<td><%= element.bookState %></td>
-						<td><button type="button" class="issuebtn btn btn-info">Issue</button></td>
-						<td><button type="button" class="returnbtn btn btn-warning"> Return </button></td>
-					</tr>
-					<p hidden><%= i = i+1 %></p>
-				<% }) %>
 			</tbody>
 		</table>
 	</div>
@@ -70,121 +53,353 @@
 	<div class="footer d-flex justify-content-center">
 		<p>&copy; Swapnil Pawar 2022</p>
 	</div>
-	<script>
-		$(document).ready(function(){
 
+	<div class="modal fade" id="issueModal">
+		<div class="modal-dialog">
+		  <div class="modal-content">
+	  
+			<!-- Modal Header -->
+			<div class="modal-header">
+			  <h4 class="modal-title"><span id="title">Issue Book</span></h4>
+			  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+			</div>
+	  
+			<!-- Modal body -->
+			<div class="modal-body">
+			  <form class="form">
+				  	<label>Book Name</label>
+					<input type="text" id="bookName" class="form-control" value=""/>
+					<br/>
+					<label>Issue Date</label>
+					<input type="text" id="todaysDate" class="form-control" value="" />
+					<br/>
+					<label>Issued To</label>
+					<input type="text" id="bookIssuedTo" class="form-control" placeholder="Issue To" required/>
+					<br/>
+					<label id="dueDate">Due Date</label>
+					<input type="text" id="bookDue" class="form-control" val=""/>
+			  </form>
+			</div>
+	  
+			<!-- Modal footer -->
+			<div class="modal-footer">
+				<button type="button" class="cnfissuebtn btn btn-primary">Issue</button>
+			  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+			</div>
+	  
+		  </div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="returnModal">
+		<div class="modal-dialog">
+		  <div class="modal-content">
+	
+			<!-- Modal Header -->
+			<div class="modal-header">
+			  <h4 class="modal-title"><span id="title"></span>
+			  </h4><span id="fineTag" class="badge bg-danger"></span>
+			  <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+			</div>
+			<!-- Modal body -->
+			<div class="modal-body">
+			  <form class="form">
+				  	<label>Book Name</label>
+					<input type="text" id="bookName" class="form-control" value=""/>
+					<br/>
+					<label>Issue Date</label>
+					<input type="text" id="todaysDate" class="form-control" value="" />
+					<br/>
+					<label>Issued To</label>
+					<input type="text" id="bookIssuedTo" class="form-control" placeholder="Issue To" required/>
+					<br/>
+					<label id="dueDate">Due Date</label>
+					<input type="text" id="bookDue" class="form-control" val=""/>
+					<br/>
+					<label>Return Date</label>
+					<input type="date" id="returnDate" class="form-control" val=""/>
+			  </form>
+			</div>
+	  
+			<!-- Modal footer -->
+			<div class="modal-footer">
+				<button type="button" class="returnIssuedbtn btn btn-primary">Return</button>
+			  <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Close</button>
+			</div>
+	  
+		  </div>
+		</div>
+	</div>
+	
+	<script>
+		//Sockets
+		var socket = io()
+		//Socket Connection
+		socket.on("connect", function(){
+			console.log("Connected")
+		})
+
+		$(document).ready(function(){
+			load()
+			
 			$('.logoutbtn').on('click', function(){
 				logout();
 			})
 
 			$('.table1').DataTable();
+	
 
-			$('.form1').submit(function(e){
-				insert();
-				e.preventDefault();
-				document.getElementsByClassName('form1')[0].reset();
-			})	
+			/* End */
 
+			/* Issue Book */
 			$('.table1').on('click', '.issuebtn', function(){
 				var currentRow=$(this).closest("tr"); 
-				 let bookName = currentRow.find('td:eq(1)').text();
-				currentRow.find("td:eq(5)").html(" ").append("Issued");
-				 issue(bookName);
+				let bookName = currentRow.find('td:eq(1)').text();
+				//currentRow.find("td:eq(5)").html(" ").append("Issued");
+				var now = new Date();
+				var month = (now.getMonth() + 1);               
+				var day = now.getDate();
+				if (month < 10) 
+					month = "0" + month;
+				if (day < 10) 
+					day = "0" + day;
+				var today = now.getFullYear() + "-" + month + "-" + day;
+				var someDate = new Date();
+				someDate.setDate(someDate.getDate() + 15); //number  of days to add, e.x. 15 days
+				var dueMonth = (someDate.getMonth() + 1);
+				var dueDay = someDate.getDate();
+				if (dueMonth < 10) 
+					dueMonth = "0" + dueMonth;
+				if (dueDay < 10) 
+					dueDay = "0" + dueDay;
+				var dueDay = now.getFullYear()+ "-" + dueMonth + "-" + dueDay;
+				$('#bookDue').val(dueDay)
+				$('#title').html('Issue Book')
+				$('#bookName').val(bookName).attr('readonly', true);
+				$('#bookIssuedTo').val("").attr('readonly', false);
+				$('#dueDate').hide()
+				$("#bookDue").hide();
+				$('.cnfissuebtn').show();
+				$('#todaysDate').val(today).attr('readonly', true);
+				$('#issueModal').modal("show")
 			})
+
+			$('.cnfissuebtn').on('click', ()=>{
+				let bookName = $('#bookName').val();
+				let issuedTo = $('#bookIssuedTo').val();
+				let issuedDate = $('#todaysDate').val();
+				let bookDueDay = $('#bookDue').val();
+				//console.log(bookDueDay);
+				if(issuedTo == ""){
+					alert("Please Fill Issuer Name/ID")
+				}
+				else{	
+					issue(bookName, issuedTo, issuedDate, bookDueDay);
+					issueInfo(bookName);
+				}
+			})
+
+			$('.table1').on('click', '.issueinfobtn', function(){
+				var currentRow=$(this).closest("tr"); 
+				let bookName = currentRow.find('td:eq(1)').text();
+				issueInfo(bookName);
+			})
+			/* End */
 			
+			/* Return Book */
 			$('.table1').on('click', '.returnbtn', function(){
 				var currentRow=$(this).closest("tr"); 
 				 let bookName = currentRow.find('td:eq(1)').text();
-				 currentRow.find("td:eq(5)").html(" ").append("Available");
-				 returned(bookName);
+				 let bookState = currentRow.find('td:eq(5)').text();
+				 //currentRow.find("td:eq(5)").html(" ").append("Available");
+				 var now = new Date();
+				var month = (now.getMonth() + 1);               
+				var day = now.getDate();
+				if (month < 10) 
+					month = "0" + month;
+				if (day < 10) 
+					day = "0" + day;
+				var today = now.getFullYear() + "-" + month + '-' + day;
+				 if(bookState == "Issued") returnIssued(bookName, today)
+				 else alert("Book Available")
 			})
 
+			$('.returnIssuedbtn').on('click', function() {
+				let bookName = $('#returnModal #bookName').val();
+				let dueDate = $('#returnModal #bookDue').val();
+				let returnDate = $('#returnModal #returnDate').val();
+				if(returnDate == "") alert("Please Select Return Date")
+				else{
+					var fineCollected = false
+					if(returnDate < dueDate){
+						fineCollected = false
+					}else if(returnDate > dueDate){
+						fineCollected = true
+					} 
+					returned(bookName, returnDate, fineCollected);
+				}
+			})
+
+			/* End */
 
 		})
+
+		function load(){
+			socket.emit("load")
+			socket.on("tabledata", (data) => {
+				var bookList = data.data;
+				$('.table1').DataTable().clear().draw();
+				let counter = 1;
+				for(var i in bookList){
+					var bookName = bookList[i].bookName
+					var bookAuthor = bookList[i].bookAuthor
+					var bookPages = bookList[i].bookPages
+					var bookPrice = bookList[i].bookPrice
+					var bookState = bookList[i].bookState
+					var btnIssue;
+					if(bookState == 'Issued'){
+						btnIssue = '<button type="button" class="issueinfobtn btn btn-info">Info</button>'
+					}else{
+						btnIssue = '<button type="button" class="issuebtn btn btn-info">Issue</button>'
+					}
+					var btnReturn = '<button type="button" class="returnbtn btn btn-warning">Return</button>'
+					if(bookState != "Removed"){
+						$('.table1').DataTable().row.add([
+							counter,
+							bookName,
+							bookAuthor,
+							bookPages,
+							bookPrice,
+							bookState,
+							btnIssue,
+							btnReturn,
+						]).draw();
+						counter++
+					}
+				}	
+			})
+		}
 
 		function logout(){
 			$.ajax({
 				type: "post",
 				url: "/api/userlogout",
 				success: function(data){
+					document.cookie =  'User-Token=; Path=/; Expires=Thu, 01 Jan 1970 00:00:01 GMT;';
 					window.location.reload();
 					window.location.href = data.url;
 				}
 			})
 		}
 		
-		function returned(bookName){
-			data = {
-				bookName: bookName,
-			}
-			$.ajax({
-				type: "post",
-				url: "/api/return",
-				data: data,
-				success: function(data){
-					if(data.status == 200){
-						alert('Book Retured');
-					}else if(data.status == 500){
-						alert('Book Available')
-					}
+		function returned(bookName, returnDate, fineCollected){
+			data = [
+				{
+					"bookName": bookName,
+					"returnDate": returnDate,
+					"fineCollected": fineCollected,
 				}
+			]
+			socket.emit("/api/return", {
+				data: data,
+			})
+			socket.on("/api/return", (data) => {
+				var data = data.data;
+				if(data[0].status == 200){
+					$('#returnModal').modal("toggle")
+					$('#returnModal #returnDate').val("")
+					load();
+				}
+				else if(data[0].status == 500) alert("Book Available")
 			})
 		}
 
-		function issue(bookName){
-			data = {
-				bookName: bookName,
-			}
-			$.ajax({
-				type: "post",
-				url: "/api/issue",
-				crossDomain: true,
-				data: data,
-				success: function(data){
-					if(data.status == 200){
-						alert('Book Issued');
-					}else if(data.status == 500){
-						alert('Book already Issued')
+		function returnIssued(bookName, todayDate){
+			var data = [
+					{
+						"bookName": bookName,
 					}
+				]
+			socket.emit("/api/returnInfo",{
+				data: data,
+			})
+			socket.on("/api/returnInfo", (data)=> {
+				var info = data.data
+				//console.log(info[0].status)
+				if(info[0].status == 200){
+					$('#returnModal #title').html("Book Info")
+					$('#returnModal #bookName').val(bookName).attr('readonly', true);
+					$('#returnModal #bookIssuedTo').val(info[0].issuedName).attr('readonly', true);
+					$('#returnModal #todaysDate').val(info[0].issuedDate).attr('readonly', true)
+					$('#returnModal #bookDue').val("").val(info[0].bookDueDate).attr('readonly', true)
+					//$('#returnModal #dueDate').show();
+					$('#returnModal #bookDue').show();
+					var dueDate = $('#returnModal #bookDate').val()
+					if(todayDate > dueDate){
+						$('#fineTag').html("Fine");
+					}else{
+						$('#fineTag').hide();
+					}
+					$('#returnModal').modal("show")
+				}else if(info[0].status == 500){
+					alert("Book not been Issued")
 				}
 			})
+
 		}
 
-		function insert(){
-			//$('#name').val();
-			let name = $('#name').val(); 
-			let author = $('#author').val(); 
-			let pages = $('#pages').val();
-			let price = $('#prices').val();
-			var data = {
-				name: $('#name').val(),
-				author: $('#author').val(),
-				pages: $('#pages').val(),
-				price: $('#prices').val()
-			}
-			$.ajax({
-				type: "post",
-				url: '/api/add',
-				data: data,
-				success: function(data){
-					if(data.status == 200){
-						var i = data.len;
-						$('.table1').DataTable().row.add([
-							i,
-							name,
-							author,
-							pages,
-							price,
-							"Available",
-							'<button type="button" class="issuebtn btn btn-info"> Issue </button>',
-							'<button type="button" class="returnbtn btn btn-warning"> Return </button>',
-						]).draw();
-					}else if(data.status == 409){
-						alert('Book present with same name')
-					}
+		function issue(bookName, issuedTo, issuedDate, bookDueDay){
+			data = [
+				{
+					"bookName": bookName,
+					"issuedTo": issuedTo,
+					"issuedDate": issuedDate,
+					"bookDueDay": bookDueDay,
 				}
+			]
+			socket.emit("/api/issue", {
+				data: data,
 			})
+			socket.on("/api/issue", (data) => {
+				var data = data.data;
+				if(data[0].status == 200){
+					load();
+				} 
+				else if(data[0].status == 500) alert("Book Issued")
+			})
+
 		}
+
+		function issueInfo(bookName){
+			var data = [
+					{
+						"bookName": bookName,
+					}
+				]
+				socket.emit("/api/issueInfo",{
+					data: data,
+				})
+				socket.on("/api/issuedInfo", (data)=> {
+					var info = data.data
+					//console.log(info[0].status)
+					if(info[0].status == 200){
+						$('#title').html("Issued Book Info")
+						$('#bookName').val(bookName).attr('readonly', true);
+						$('#bookIssuedTo').val(info[0].issuedName).attr('readonly', true);
+						$('#todaysDate').val(info[0].issuedDate).attr('readonly', true)
+						$('#bookDue').val("").val(info[0].bookDueDate).attr('readonly', true)
+						$('.cnfissuebtn').hide();
+						$('#dueDate').show();
+						$('#bookDue').show();
+						$('#issueModal').modal("show")
+						
+					}else if(info[0].status == 500){
+						alert("Book not been Issued")
+					}
+				})
+		}
+
+		
 	</script>
 </body>
 </html>
