--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -59,7 +59,7 @@
                 dataType: "json",
                 success:function(data){
                     if(data.status == 200){
-                        //alert('User Present')
+                        document.cookie = "User-Token="+data.token
                     }else if(data.status == 404){
                         alert('User not Present')
                         
@@ -68,10 +68,19 @@
             })
         }
 
+        function getCookie(name) {
+            const value = `; ${document.cookie}`;
+            const parts = value.split(`; ${name}=`);
+            if (parts.length === 2) return parts.pop().split(';').shift();
+        }
+
         function load_page(pageName){
+            let cookieName = getCookie("User-Token")
             data = {
                 page: pageName,
+                token: cookieName,
             }
+            
             $.ajax({
                 type: "post",
                 url: "/pageName",
