--- a/views/admin/admin_login.ejs
+++ b/views/admin/admin_login.ejs
@@ -13,6 +13,13 @@
 	integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" 
 	crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap4.min.js"></script>
+    <script src="https://cdn.socket.io/4.5.0/socket.io.min.js" 
+	integrity="sha384-7EyYLQZgWBi67fBtVxw60/OWl1kjsfrPFcaU0pp0nAh+i8FD068QogUvg85Ewy1k" 
+	crossorigin="anonymous"></script>
+    <script src="../assets/js/admin_script.js"></script>
+    <link href="../assets/css/style.css"/>
     <title> Admin Login Page</title>
 </head>
 <body>
@@ -22,64 +29,19 @@
         </div>
         <h5>Admin Login </h5>
         <div class="container pt-2 ">
-            <form action="/load_page" method="POST" class="form admin-form">
+            <form action="/admin_load_page" method="POST" class="form admin-form">
                 <div class="alert-box">
                 </div>
                 <div class="mb-3">
-                    <input type="text" id="admin-uname" class="form-control-lg" placeholder="Username" required />
+                    <input type="text" id="admin-uname" class="form-control-lg" placeholder="Admin Username" required />
                 </div>
                 <div class="mb-3">
-                    <input type="password" id="admin-pwd" class="form-control-lg" placeholder="Password" required />
+                    <input type="password" id="admin-pwd" class="form-control-lg" placeholder="Admin Password" required />
                 </div>
                 <button type="submit" class="btn btn-primary justify-content-center">Login</button>
                 <button type="cancel" class="btn btn-danger">Cancel</button>
             </form>
         </div>
-    </div>
-    <script>
-        $(document).ready(function(){
-            $('.admin-form').submit(function(e){
-                var uname = $('#admin-uname').val();
-                var pwd = $('#admin-pwd').val();
-                adminlogin(uname, pwd);
-                var page = "admin_dashboard";
-                load_page(page);
-            })
-        })
-        function adminlogin(name, pwd){
-            data = {
-                name: name,
-                pwd: pwd,
-            }
-            $.ajax({
-                type: "post",
-                url: "/api/adminlogin",
-                data: data,
-                dataType: "json",
-                success:function(data){
-                    if(data.status == 200){
-                        console('Logged In')
-                    }else if(data.status == 404){
-                        alert('Wrong Username or Password')
-                        
-                    }
-                }
-            })
-        }
-
-        function load_page(page){
-            data = {
-                page: page,
-            }
-            $.ajax({
-                type: "post",
-                url: "/pageName",
-                data: data,
-                success: function(){
-                    //
-                }
-            })
-        }
-    </script>    
+    </div>    
 </body>
 </html>
